Use CommonExtension instead of BaseExtension. Update dependencies.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,2 @@
-org.gradle.configuration-cache=true
+# Disable configuration cache to update plugin version for every run
+org.gradle.configuration-cache=false
